--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
     <!-- Bootstrap CSS -->
 <!--     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="style/bootstrap.css">
-    <link rel="stylesheet" href="style/theme.css">
+    <link rel="stylesheet" href="public/style/bootstrap.css">
+    <link rel="stylesheet" href="public/style/theme.css">
 
     <title>Virus Simulator</title>
   </head>
@@ -191,8 +191,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/p5.js"></script>
-    <script src="browser/quadtree.js"></script>
-    <script src="browser/simulation.js"></script>
-    <script src="browser/sketch.js"></script>
+    <script src="public/browser/quadtree.js"></script>
+    <script src="public/browser/simulation.js"></script>
+    <script src="public/browser/sketch.js"></script>
   </body>
 </html>
