--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-<!--     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="public/style/bootstrap.css">
-    <link rel="stylesheet" href="public/style/theme.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>Virus Simulator</title>
   </head>
@@ -27,8 +25,11 @@
             <li class="nav-item">
               <a class="nav-link disabled" id="pause" href="#">Pause</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" id="analyze" href="#">Analyze</a>
+            </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="speedText" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" id="speedText" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Speed: Fast
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -38,18 +39,26 @@
               </div>
             </li>
           </ul>
-          <form class="my-2 my-lg-0">
-            <label class="mr-2">Healthy: </label>
-            <label class="count text-secondary" id="0">5000</label>
-            <label class="mr-2">Infected: </label>
-            <label class="count text-warning" id="1">0</label>
-            <label class="mr-2">Confirmed: </label>
-            <label class="count text-danger" id="2">0</label>
-            <label class="mr-2">Dead: </label>
-            <label class="count text-primary" id="3">0</label>
-            <label class="mr-2">Recovered: </label>
-            <label class="count text-info" id="4">0</label>
-          </form>
+          <div class="nav-link">
+            <img width="20" src="/public/icons/svg/cardiogram.svg" alt="icon name">
+            <a class="count text-secondary" id="0">Healthy: 5000</a>
+          </div>
+          <div class="nav-link">
+            <img width="20" src="/public/icons/svg/pill.svg" alt="icon name">
+            <a class="count text-warning" id="1">Infected: 0</a>
+          </div>
+          <div class="nav-link">
+            <img width="20" src="/public/icons/svg/notepad.svg" alt="icon name">
+            <a class="count text-danger" id="2">Confirmed: 0</a>
+          </div>
+          <div class="nav-link">
+            <img width="20" src="/public/icons/svg/pharmacy.svg" alt="icon name">
+            <a class="count text-dark" id="3">Dead: 0</a>
+          </div>
+          <div class="nav-link">
+            <img width="20" src="/public/icons/svg/protection.svg" alt="icon name">
+            <a class="count text-primary" id="4">Recovered: 0</a>
+          </div>
         </div>
       </div>
     </header>
@@ -59,8 +68,8 @@
         <div class="progress">
           <div class="progress-bar bg-warning" role="progressbar" id="1" style="width: 0%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
           <div class="progress-bar bg-danger" role="progressbar" id="2" style="width: 0%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-          <div class="progress-bar bg-primary" role="progressbar" id="3" style="width: 0%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-          <div class="progress-bar bg-info" role="progressbar" id="4" style="width: 0%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+          <div class="progress-bar bg-dark" role="progressbar" id="3" style="width: 0%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+          <div class="progress-bar bg-primary" role="progressbar" id="4" style="width: 0%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
       </div>
       
@@ -106,9 +115,9 @@
                 </div>
                 <fieldset class="form-group">
                   <legend>Virus settings</legend>
-                  <label for="customRange1">Infectivity rate</label>
+                  <label for="infectivity">Infection rate</label>
                   <input type="range" class="custom-range" id="infectivity" value ="20">
-                  <label for="customRange1">Fatality rate</label>
+                  <label for="fatality">Fatality rate</label>
                   <input type="range" class="custom-range" id="fatality" value ="5">
                 </fieldset>
                 <div class="form-group">
@@ -155,7 +164,7 @@
       </div>
     </main>
 
-    <div class="modal" id="tutorial">
+    <div class="modal fade" id="tutorial">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -167,7 +176,7 @@
           <div class="modal-body">
             <div class="p-4">
               <h4 class="font-italic">Set properties</h4>
-              <p class="mb-0">Choose appropriate settings for herd and virus properties and click "Apply" to save changes.</p>
+              <p class="mb-0">Choose appropriate settings for the herd and the virus properties and click "Apply" to save changes.</p>
             </div>
             <div class="p-4">
               <h4 class="font-italic">Start simulation</h4>
@@ -175,8 +184,31 @@
             </div>
             <div class="p-4">
               <h4 class="font-italic">Start infection</h4>
-              <p class="mb-0">Click on the canvas to start the infection.</p>
+              <p class="mb-0">Click on the canvas to start the infection. Note that multiple infections can be initiated during the simulation.</p>
             </div>
+            <div class="p-4">
+              <h4 class="font-italic">Analyze results</h4>
+              <p class="mb-0">Wait for the simulation to run. Click "Pause" to stop the simulation and click "Analyze" to plot the results.</p>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="analysis">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Analysis</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div id="plot"></div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -191,8 +223,10 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/p5.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="public/browser/quadtree.js"></script>
     <script src="public/browser/simulation.js"></script>
     <script src="public/browser/sketch.js"></script>
+    <script src="public/browser/plot.js"></script>
   </body>
 </html>
