--- a/index.html
+++ b/index.html
@@ -40,23 +40,23 @@
             </li>
           </ul>
           <div class="nav-link">
-            <img width="20" src="/public/icons/svg/cardiogram.svg" alt="icon name">
+            <img width="20" src="public/icons/svg/cardiogram.svg" alt="icon name">
             <a class="count text-secondary" id="0">Healthy: 5000</a>
           </div>
           <div class="nav-link">
-            <img width="20" src="/public/icons/svg/pill.svg" alt="icon name">
+            <img width="20" src="public/icons/svg/pill.svg" alt="icon name">
             <a class="count text-warning" id="1">Infected: 0</a>
           </div>
           <div class="nav-link">
-            <img width="20" src="/public/icons/svg/notepad.svg" alt="icon name">
+            <img width="20" src="public/icons/svg/notepad.svg" alt="icon name">
             <a class="count text-danger" id="2">Confirmed: 0</a>
           </div>
           <div class="nav-link">
-            <img width="20" src="/public/icons/svg/pharmacy.svg" alt="icon name">
+            <img width="20" src="public/icons/svg/pharmacy.svg" alt="icon name">
             <a class="count text-dark" id="3">Dead: 0</a>
           </div>
           <div class="nav-link">
-            <img width="20" src="/public/icons/svg/protection.svg" alt="icon name">
+            <img width="20" src="public/icons/svg/protection.svg" alt="icon name">
             <a class="count text-primary" id="4">Recovered: 0</a>
           </div>
         </div>
