--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta name="description" content="Welcome to Virus Simulator! This is a simple interactive web application that simulates the spread of virus.">
+    <meta name="keywords" content="Virus,Processing,animation,JavaScript">
+    <meta name="author" content="Ziyi Zhu">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="shortcut icon" href="public/images/favicon.png"/>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -40,23 +45,23 @@
             </li>
           </ul>
           <div class="nav-link">
-            <img width="20" src="public/icons/svg/cardiogram.svg" alt="icon name">
+            <img width="20" src="public/images/svg/cardiogram.svg" alt="icon name">
             <a class="count text-secondary" id="0">Healthy: 5000</a>
           </div>
           <div class="nav-link">
-            <img width="20" src="public/icons/svg/pill.svg" alt="icon name">
+            <img width="20" src="public/images/svg/pill.svg" alt="icon name">
             <a class="count text-warning" id="1">Infected: 0</a>
           </div>
           <div class="nav-link">
-            <img width="20" src="public/icons/svg/notepad.svg" alt="icon name">
+            <img width="20" src="public/images/svg/notepad.svg" alt="icon name">
             <a class="count text-danger" id="2">Confirmed: 0</a>
           </div>
           <div class="nav-link">
-            <img width="20" src="public/icons/svg/pharmacy.svg" alt="icon name">
+            <img width="20" src="public/images/svg/pharmacy.svg" alt="icon name">
             <a class="count text-dark" id="3">Dead: 0</a>
           </div>
           <div class="nav-link">
-            <img width="20" src="public/icons/svg/protection.svg" alt="icon name">
+            <img width="20" src="public/images/svg/protection.svg" alt="icon name">
             <a class="count text-primary" id="4">Recovered: 0</a>
           </div>
         </div>
